Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -1,187 +1,71 @@
 ---
-title: Introduction to LaunchPulse
-description: LaunchPulse is your AI software team in the browser.
+title: "Introduction to LaunchPulse"
+description: "LaunchPulse is your AI software team in the browser. "
 ---
 
-# Introduction to LaunchPulse
+![Screenshot2025 11 14at21 04 48 Pn](/images/Screenshot2025-11-14at21.04.48.png)
 
-LaunchPulse is your AI software team in the browser.
-
-<Info>
-From a single prompt, LaunchPulse’s multi-agent system plans, builds, tests, and deploys a full-stack web application that’s ready for real users.
-</Info>
+Instead of hiring a full dev team or wrestling with code yourself, you describe the software you want and LaunchPulse’s multi-agent system plans, builds, tests, and deploys a full-stack web application that’s ready for real users.
 
 From your first prompt, LaunchPulse can generate a complete, business-ready product with dozens of features, wired-up flows, and production infrastructure already in place.
 
-<CardGroup cols={3}>
-  <Card title="What it is" href="#what-is-launchpulse">
-    An AI-powered development platform that turns high-level ideas into live, full-stack web applications.
-  </Card>
-  <Card title="Who it’s for" href="#who-is-launchpulse-for">
-    Builders who need to ship serious software fast: founders, agencies, teams, and developers.
-  </Card>
-  <Card title="What it builds" href="#what-can-launchpulse-build">
-    Full products with frontend, backend, database, QA, and hosting — not just toy UIs or snippets.
-  </Card>
-</CardGroup>
-
----
-
-## What is LaunchPulse?
+## **What is LaunchPulse?**
 
 LaunchPulse is an AI-powered development platform that turns high-level ideas into live, full-stack web applications.
 
 Behind the scenes, a team of specialised AI agents work together like a digital product squad:
 
-- **Product & UX agents** translate your idea into clear flows and features.
-- **Frontend & design agents** build the interface and user experience.
-- **Backend & database agents** generate secure, scalable server logic and data models.
-- **QA / browser agents** automatically test the app, catch issues, and propose fixes.
+- **Product & UX agents** to translate your idea into clear flows and features
+- **Frontend & design agents** to build the interface and user experience
+- **Backend & database agents** to generate secure, scalable server logic and data models
+- **QA / browser agents** to automatically test the app, catch issues, and propose fixes
 
-<Tip>
 You stay in natural language. LaunchPulse handles the code, architecture, and deployment.
-</Tip>
 
----
+<Card title="Start here" icon="rocket" horizontal href="/quickstart">
+  
+</Card>
 
-## Who is LaunchPulse for?
+## Make it yours
 
-LaunchPulse is built for anyone who needs to ship software fast without sacrificing seriousness:
+Design a docs site that looks great and empowers your users.
 
-- **Founders & solo entrepreneurs** who want to launch an MVP in days, not months.
-- **Agencies & freelancers** who need to deliver more client projects with less overhead.
-- **Product & growth teams** who want to test ideas quickly with real users.
-- **Developers** who want to offload boilerplate and focus on the hard, high-leverage work.
-
-If you have a clear idea of the product, LaunchPulse helps you turn that into a live app with production-grade foundations.
-
----
-
-## What can LaunchPulse build?
-
-A LaunchPulse project is not a landing-page toy. It’s a full-stack, live, functional product that can get first users the same day it’s created.
-
-Typical output includes:
-
-- **Frontend** – responsive UI, navigation, forms, dashboards, onboarding flows, and more.
-- **Backend** – APIs, business logic, authentication, background tasks, integrations, etc.
-- **Database** – schema generation, relations, and data access wired directly into the app.
-- **Built-in pages** – terms, privacy, basic legal and policy pages to get you started.
-- **Rich feature sets** – up to 30–40+ features in a single build, depending on your prompt.
-
-From SaaS dashboards and internal tools to marketplaces and booking flows, LaunchPulse focuses on complex, multi-feature apps — not just simple CRUD screens.
-
----
-
-## How LaunchPulse works
-
-LaunchPulse is designed around a simple three-step flow:
-
-<Steps>
-  <Step title="1. Describe">
-    Tell LaunchPulse what you want to build:
-
-    - Write a detailed prompt about your product, users, and goals.
-    - Optionally include existing copy, user stories, or rough wireframes.
-    - Define what “success” looks like for this version (MVP, v1, internal tool, etc.).
-
-    The Product & UX agents interpret your description and turn it into a structured plan.
-  </Step>
-
-  <Step title="2. Build">
-    LaunchPulse’s agents then build your app:
-
-    - Frontend, backend, and database are generated from the same shared context.
-    - Features are implemented in one coordinated build, not one tiny tweak at a time.
-    - A browser-based QA agent runs through the app, exercising flows and catching issues.
-
-    You can refine your app with chat iterations — high-impact change requests like:
-
-    - “Add team accounts with roles and permissions.”
-    - “Redesign the dashboard to highlight weekly metrics.”
-    - “Add a simple billing settings page with plan details.”
-  </Step>
-
-  <Step title="3. Launch">
-    When you’re ready to show the world:
-
-    - LaunchPulse hosts your app on secure, high-performance infrastructure.
-    - You get a shareable live URL immediately.
-    - You can connect your own custom domain when you’re ready to go public.
-
-    <Check>
-      No separate hosting accounts, no manual deployment pipeline, no DevOps setup.
-    </Check>
-  </Step>
-</Steps>
-
----
-
-## Key capabilities
-
-<CardGroup cols={3}>
-  <Card title="Multi-agent architecture">
-    Specialised agents for product, UX, frontend, backend, database, APIs, and QA all collaborate on each project.
+<Columns cols={2}>
+  <Card title="Edit locally" icon="pen-to-square" href="/development">
+    Edit your docs locally and preview them in real time.
   </Card>
-  <Card title="Production-ready outputs">
-    Apps are built to onboard real users on day one, with auth, flows, and infrastructure wired in.
+  <Card title="Customize your site" icon="palette" href="/essentials/settings">
+    Customize the design and colors of your site to match your brand.
   </Card>
-  <Card title="Deep feature builds">
-    Design and ship complex flows and dozens of features in a single build cycle, not a series of tiny prompts.
+  <Card title="Set up navigation" icon="map" href="/essentials/navigation">
+    Organize your docs to help users find what they need and succeed with your product.
   </Card>
-</CardGroup>
-
-<CardGroup cols={3}>
-  <Card title="Advanced QA & browser testing">
-    Automated browser agents test your app end-to-end, surface issues, and help fix them before you go live.
+  <Card title="API documentation" icon="terminal" href="/api-reference/introduction">
+    Auto-generate API documentation from OpenAPI specifications.
   </Card>
-  <Card title="Hosting & publishing built-in">
-    One-click deployment, secure hosting, and live URLs without leaving the platform.
+</Columns>
+
+## Create beautiful pages
+
+Everything you need to create world-class documentation.
+
+<Columns cols={2}>
+  <Card title="Write with MDX" icon="pen-fancy" href="/essentials/markdown">
+    Use MDX to style your docs pages.
   </Card>
-  <Card title="Iterative improvement">
-    Refine your app through guided chat iterations instead of manually editing a massive codebase.
+  <Card title="Code samples" icon="code" href="/essentials/code">
+    Add sample code to demonstrate how to use your product.
   </Card>
-</CardGroup>
+  <Card title="Images" icon="image" href="/essentials/images">
+    Display images and other media.
+  </Card>
+  <Card title="Reusable snippets" icon="recycle" href="/essentials/reusable-snippets">
+    Write once and reuse across your docs.
+  </Card>
+</Columns>
 
----
+## Need inspiration?
 
-## Why LaunchPulse instead of other AI builders?
-
-Most AI builders or “vibe coding” tools focus on:
-
-- Generating small pieces of code inside an editor.
-- Producing simple UIs or tiny features that require manual glue.
-- Leaving testing, architecture, and deployment to you.
-
-LaunchPulse is built for people who want **end-to-end products**, not just code snippets:
-
-- It treats your app as a single system (frontend, backend, database, infra, and QA together).
-- It’s optimised for complex, multi-feature builds, not just a login page and a dashboard.
-- It bakes in automated testing and review loops so AI doesn’t ship obviously broken flows.
-
-The outcome is closer to:
-
-> “I just hired a small product team for this build”
-
-than:
-
-> “I asked a model for some code.”
-
----
-
-## Getting started
-
-<Steps>
-  <Step title="1. Create your account & start a Premium project">
-    Spin up your first full-featured project in LaunchPulse.
-  </Step>
-
-  <Step title="2. Write your first product brief">
-    Describe your app, audience, and the core flows you need.
-    <Tip>The more context you provide, the better the results.</Tip>
-  </Step>
-
-  <Step title="3. Review, iterate, and publish">
-    Let the agents build, review the result, request changes through chat, and then publish when you’re ready.
-  </Step>
-</Steps>
+<Card title="See complete examples" icon="stars" href="https://mintlify.com/customers">
+  Browse our showcase of exceptional documentation sites.
+</Card>
