Documentation edits made through Mintlify web editor

--- a/What is LaunchPulse?.mdx
+++ b/What is LaunchPulse?.mdx
@@ -1,9 +1,9 @@
 ---
-title: "What is LaunchPulse?"
-description: "Meet LaunchPulse, the multi-agent platform and cloud runtime that turns product briefs into live, full-stack web apps."
+title: "Meet LaunchPulse"
+description: "The multi-agent platform and cloud runtime that turn product briefs into live, full-stack web apps."
 ---
 
-# Introduction to LaunchPulse 
+# Introduction to LaunchPulse
 
 LaunchPulse is your **AI software team + runtime platform** in the browser.
 
@@ -220,6 +220,6 @@ Use the rest of the docs to go deeper into each layer:
 
 <Check>
   <strong><a href="/quickstart">Ready to see the infrastructure in action?</a></strong>
-  \
+   \
   Start a new project, describe a real idea, and watch LaunchPulse build, test, and host the app for you.
 </Check>
