--- a/accounts-and-subscriptions.mdx
+++ b/accounts-and-subscriptions.mdx
@@ -1,6 +1,6 @@
 ---
-title: Accounts & Subscriptions
-description: Manage your plan, billing, projects, and iterations in LaunchPulse.
+description: "Billing, projects, and iterations in LaunchPulse."
+title: "Manage your plan"
 ---
 
 # Accounts & Subscriptions
@@ -8,7 +8,7 @@ description: Manage your plan, billing, projects, and iterations in LaunchPulse.
 LaunchPulse keeps pricing simple: one powerful plan designed to take you from idea to a fully working product that can get real users the same day — with more plan options coming soon.
 
 <Info>
-Right now, LaunchPulse offers a single **Premium** plan, plus optional add-ons for extra projects and iterations.
+  Right now, LaunchPulse offers a single **Premium** plan, plus optional add-ons for extra projects and iterations.
 </Info>
 
 ---
@@ -66,8 +66,8 @@ A **Full-Featured Project** in LaunchPulse is more than a template — it’s a 
 It also comes with:
 
 - Built-in content for:
-  - Privacy Policy  
-  - Terms & Conditions  
+  - Privacy Policy
+  - Terms & Conditions
   - Basic legal / policy pages appropriate for a modern web product
 - The potential for **40+ features** from the very first prompt, depending on what you ask the agent to build.
 
@@ -81,14 +81,14 @@ Each Premium subscription includes **15 Chat Iterations** for your Full-Featured
 
 An **iteration** is a significant change request to your app, such as:
 
-- “Add a multi-step onboarding flow for new users.”  
-- “Refactor the dashboard to support team accounts and roles.”  
+- “Add a multi-step onboarding flow for new users.”
+- “Refactor the dashboard to support team accounts and roles.”
 - “Integrate a simple billing page and update the navigation.”
 
 The LaunchPulse Agent uses these iterations to extend or re-build parts of your app while preserving what’s already working.
 
 <Info>
-You start with **15 iterations** for your project. When you need more, you can purchase additional iteration packs as an add-on.
+  You start with **15 iterations** for your project. When you need more, you can purchase additional iteration packs as an add-on.
 </Info>
 
 ---
@@ -99,16 +99,16 @@ Your Premium plan includes **1 Full-Featured Project** by default.
 
 If you want to:
 
-- Launch a second product  
-- Build a different version of your app for another market  
-- Test a completely new idea  
+- Launch a second product
+- Build a different version of your app for another market
+- Test a completely new idea
 
 …you can buy **additional projects** as needed.
 
 Each additional project comes with its own:
 
-- Full-stack setup  
-- Features  
+- Full-stack setup
+- Features
 - Iteration allowance (based on the add-on you choose)
 
 You can also purchase **extra iteration packs** for existing projects without changing your main subscription.
@@ -121,17 +121,16 @@ You can also purchase **extra iteration packs** for existing projects without ch
   <Step title="Single Premium subscription">
     You pay for the **Premium** plan on a recurring basis (for example, monthly).
   </Step>
-
   <Step title="Add-ons billed separately">
     Extra projects and extra iteration packs are billed on top of your base Premium subscription.
   </Step>
-
   <Step title="Transparent usage">
     In your billing/usage view you’ll see:
-    - Your current plan  
-    - How many projects you’re using  
-    - Remaining iterations for each project  
-    - Any add-ons you’ve purchased  
+
+    - Your current plan
+    - How many projects you’re using
+    - Remaining iterations for each project
+    - Any add-ons you’ve purchased
   </Step>
 </Steps>
 
@@ -141,15 +140,15 @@ You can also purchase **extra iteration packs** for existing projects without ch
 
 From the **Billing & Subscription** page, you can:
 
-- View your current plan and what’s included.  
-- See usage (projects and remaining iterations).  
-- Purchase additional projects or iteration packs.  
-- Update your payment method.  
-- View billing history and download invoices.  
+- View your current plan and what’s included.
+- See usage (projects and remaining iterations).
+- Purchase additional projects or iteration packs.
+- Update your payment method.
+- View billing history and download invoices.
 - Cancel or resume your subscription (according to your plan’s policy).
 
 <Tip>
-Keep an eye on remaining iterations for each project so you can plan big changes as intentional iteration requests instead of lots of tiny tweaks.
+  Keep an eye on remaining iterations for each project so you can plan big changes as intentional iteration requests instead of lots of tiny tweaks.
 </Tip>
 
 ---
@@ -159,7 +158,6 @@ Keep an eye on remaining iterations for each project so you can plan big changes
 Right now, LaunchPulse runs on a single, all-in **Premium** plan to keep things clear and focused.
 
 <Note>
-**Currently available:** one Premium plan.  
-**Coming soon:** additional plans to support different stages of your product journey.
+  **Currently available:** one Premium plan.\
+  **Coming soon:** additional plans to support different stages of your product journey.
 </Note>
-
