--- a/agents.mdx
+++ b/agents.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Agents"
-description: "Meet the multi-agent AI team that plans, builds, tests, and ships your LaunchPulse apps."
+description: "Plans, builds, tests, and ships your LaunchPulse apps."
+title: "Meet the multi-agent AI team"
 ---
 
 # Agents: Your AI product team
