Documentation edits made through Mintlify web editor

--- a/QA Agent.mdx
+++ b/QA Agent.mdx
@@ -1,6 +1,11 @@
 # Hire the tester that reads code, clicks buttons, and never sleeps.
 
-![Title The QA Agent Your Always On,self Healing Test Engineer Visual Style Amodern,cleaninfographicwithadigital,interconnectedaesthetic Useacolorpaletteofblues,purples,andgreensf Pn](/images/TitleTheQAAgentYourAlways-On,Self-HealingTestEngineerVisualStyleAmodern,cleaninfographicwithadigital,interconnectedaesthetic.Useacolorpaletteofblues,purples,andgreensf.png)
+<img
+  src="/images/TitleTheQAAgentYourAlways-On,Self-HealingTestEngineerVisualStyleAmodern,cleaninfographicwithadigital,interconnectedaesthetic.Useacolorpaletteofblues,purples,andgreensf.png"
+  alt="Title The QA Agent Your Always On,self Healing Test Engineer Visual Style Amodern,cleaninfographicwithadigital,interconnectedaesthetic Useacolorpaletteofblues,purples,andgreensf Pn"
+  title=""
+  style={{ width:"85%" }}
+/>
 
 <Info>
   The QA Agent is your always-on test engineer. It opens your app in a real browser, clicks around like a user, and pushes fixes back to the agents – all without you writing a single test script.
@@ -44,7 +49,11 @@ Most “AI builders” stop at _it compiled_. LaunchPulse keeps going:
 
 ---
 
-![Screenshot2025 12 03at22 22 53 Pn](/images/Screenshot2025-12-03at22.22.53.png)
+<img
+  src="/images/Screenshot2025-12-03at22.22.53.png"
+  alt="Screenshot2025 12 03at22 22 53 Pn"
+  style={{ width:"77%" }}
+/>
 
 ## How a QA run works
 
@@ -116,10 +125,18 @@ While a run is in progress, the sidebar shows QA’s to-do list:
 
 - **Completed tests** – flows the agent has already finished running
 
-  ![Screenshot2025 12 03at22 23 16 Pn](/images/Screenshot2025-12-03at22.23.16.png)
+  <img
+    src="/images/Screenshot2025-12-03at22.23.16.png"
+    alt="Screenshot2025 12 03at22 23 16 Pn"
+    style={{ width:"82%" }}
+  />
 - **Upcoming tests** – flows that are queued next
 
-  ![Screenshot2025 12 03at22 30 51 Pn](/images/Screenshot2025-12-03at22.30.51.png)
+  <img
+    src="/images/Screenshot2025-12-03at22.30.51.png"
+    alt="Screenshot2025 12 03at22 30 51 Pn"
+    style={{ width:"78%" }}
+  />
 - **Current action** – a short note like “filling checkout form” or “verifying password reset email”
 
 Keeping this panel open once or twice helps you build intuition for how QA sees your app.
@@ -128,7 +145,11 @@ Keeping this panel open once or twice helps you build intuition for how QA sees 
 
 ## Examples of flows QA covers
 
-![Screenshot2025 12 03at22 27 31 Pn](/images/Screenshot2025-12-03at22.27.31.png)
+<img
+  src="/images/Screenshot2025-12-03at22.27.31.png"
+  alt="Screenshot2025 12 03at22 27 31 Pn"
+  style={{ width:"74%" }}
+/>
 
 Some typical scenarios the QA Agent generates and maintains for you:
 
