Documentation edits made through Mintlify web editor

--- a/QA Agent.mdx
+++ b/QA Agent.mdx
@@ -1,11 +1,5 @@
 # Hire the tester that reads code, clicks buttons, and never sleeps.
 
-<img
-  src="/images/TitleTheQAAgentYourAlways-On,Self-HealingTestEngineerVisualStyleAmodern,cleaninfographicwithadigital,interconnectedaesthetic.Useacolorpaletteofblues,purples,andgreensf.png"
-  alt="QA Agent"
-  style={{ width: '100%', maxWidth: '800px', borderRadius: '12px', margin: '20px 0' }}
-/>
-
 <Info>
   The QA Agent is your always-on test engineer. It opens your app in a real browser, clicks around like a user, and pushes fixes back to the agents – all without you writing a single test script.
 </Info>
@@ -51,7 +45,7 @@ Most “AI builders” stop at _it compiled_. LaunchPulse keeps going:
 <img
   src="/images/Screenshot2025-12-03at22.22.53.png"
   alt="QA Agent Screenshot"
-  style={{ width: '100%', maxWidth: '800px', borderRadius: '12px', margin: '20px 0' }}
+  style={{ width:"100%",maxWidth:"800px",borderRadius:"12px",margin:"20px 0" }}
 />
 
 ## How a QA run works
@@ -124,10 +118,18 @@ While a run is in progress, the sidebar shows QA’s to-do list:
 
 - **Completed tests** – flows the agent has already finished running
 
-  <img src="/images/Screenshot2025-12-03at22.23.16.png" alt="Screenshot" style={{ width: '100%', maxWidth: '800px', borderRadius: '12px', margin: '20px 0' }} />
+  <img
+    src="/images/Screenshot2025-12-03at22.23.16.png"
+    alt="Screenshot"
+    style={{ width:"100%",maxWidth:"800px",borderRadius:"12px",margin:"20px 0" }}
+  />
 - **Upcoming tests** – flows that are queued next
 
-  <img src="/images/Screenshot2025-12-03at22.30.51.png" alt="Screenshot" style={{ width: '100%', maxWidth: '800px', borderRadius: '12px', margin: '20px 0' }} />
+  <img
+    src="/images/Screenshot2025-12-03at22.30.51.png"
+    alt="Screenshot"
+    style={{ width:"100%",maxWidth:"800px",borderRadius:"12px",margin:"20px 0" }}
+  />
 - **Current action** – a short note like “filling checkout form” or “verifying password reset email”
 
 Keeping this panel open once or twice helps you build intuition for how QA sees your app.
@@ -135,8 +137,6 @@ Keeping this panel open once or twice helps you build intuition for how QA sees 
 ---
 
 ## Examples of flows QA covers
-
-<img src="/images/Screenshot2025-12-03at22.27.31.png" alt="Screenshot" style={{ width: '100%', maxWidth: '800px', borderRadius: '12px', margin: '20px 0' }} />
 
 Some typical scenarios the QA Agent generates and maintains for you:
 
