Documentation edits made through Mintlify web editor

--- a/launchpulse-cloud.mdx
+++ b/launchpulse-cloud.mdx
@@ -6,7 +6,7 @@ description: "Launch, host, and scale your LaunchPulse apps without managing ser
 # What is LaunchPulse Cloud?
 
 LaunchPulse Cloud brings everything you need to **launch your web app** together in one place.\
-No juggling hosting providers, databases, or DNS panels — and no extra accounts to set up.
+No juggling hosting providers, databases, or DNS panels - and no extra accounts to set up.
 
 Behind the scenes, LaunchPulse Cloud runs on modern, high-performance infrastructure, but you never have to touch any of it. You focus on describing and refining your product, and LaunchPulse handles the rest.
 
@@ -44,7 +44,7 @@ Your app loads quickly, stays stable under load, and is ready for search engines
 
 - Each project builds into a deployable, production-ready application.
 - When you’re ready, just click **Deploy** in the top-right corner.
-- A live URL is generated instantly — no configs, no DevOps, no CI/CD wiring.
+- A live URL is generated instantly - no configs, no DevOps, no CI/CD wiring.
 
 <Frame>
   ![LaunchPulse project header showing Structure, Code, Preview, Database, Domains, and the Validate and Deploy buttons](/images/cloud-bar.png)
@@ -72,7 +72,7 @@ Your app loads quickly, stays stable under load, and is ready for search engines
 
 ## Data & databases
 
-Every LaunchPulse project comes with fully managed databases built in — no servers to spin up, no config files, and no separate tools to learn. You describe the app; LaunchPulse sets up the data layer.
+Every LaunchPulse project comes with fully managed databases built in - no servers to spin up, no config files, and no separate tools to learn. You describe the app; LaunchPulse sets up the data layer.
 
 **What you get**
 
@@ -153,7 +153,7 @@ The user information surface is visible in two places:
 - In the **left sidebar** of your project, under the live application status.
 - In the **top-left bar**, via the person icon.
 
-There you’ll see **test users** — pre-configured accounts you can use to log in and explore the app like a real user.
+There you’ll see **test users** - pre-configured accounts you can use to log in and explore the app like a real user.
 
 <Frame>
   ![LaunchPulse project view showing the Overview agent graph and the test users list in the left sidebar](/images/cloud-test-users.png)
@@ -170,13 +170,13 @@ There you’ll see **test users** — pre-configured accounts you can use to log
 
 <CardGroup cols={3}>
   <Card title="Full-stack hosting">
-    Frontend, backend, and database all run together on LaunchPulse Cloud — no extra infrastructure to maintain.
+    Frontend, backend, and database all run together on LaunchPulse Cloud - no extra infrastructure to maintain.
   </Card>
   <Card title="Web apps by default">
     Launch full web platforms with routing, auth, and data built in. Connect your own domain when you’re ready.
   </Card>
   <Card title="AI-powered operations">
-    Multiple agents don’t just build your app — they also help repair, validate, and keep it healthy over time.
+    Multiple agents don’t just build your app - they also help repair, validate, and keep it healthy over time.
   </Card>
 </CardGroup>
 
@@ -198,6 +198,6 @@ There you’ll see **test users** — pre-configured accounts you can use to log
 
 <Check>
   <strong><a href="/dashboard">Ship your next app on LaunchPulse Cloud.</a></strong>
-  \
+   \
   Skip the DevOps maze and go straight from idea to live, production-ready product.
 </Check>
