--- a/Agents.mdx
+++ b/Agents.mdx
@@ -6,7 +6,7 @@ description: "Meet the multi-agent AI team that plans, builds, tests, and ships 
 # Agents: Your AI product team
 
 LaunchPulse doesn’t rely on one “giant” AI that tries to do everything.\
-Every project is built by a specialised **team of agents**, each with a clear role, shared context, and access to its own tools. 
+Every project is built by a specialised **team of agents**, each with a clear role, shared context, and access to its own tools.
 
 <Check>
   [Ready to see them work together?](https://launchpulse.ai/)\
@@ -15,7 +15,7 @@ Every project is built by a specialised **team of agents**, each with a clear ro
 
 ---
 
-## Core agent architecture 
+## Core agent architecture
 
 Most vibe-coding tools just throw a big prompt at a single model and hope for the best.\
 LaunchPulse is different. It was designed from the ground up as **agent-first infrastructure**:
@@ -43,7 +43,7 @@ That’s why LaunchPulse can ship complex, multi-feature apps that feel like a r
 ## Agent lineup
 
 <Info>
-  Below is the current core agent roster. These agents run automatically as part of your build pipeline — you don’t have to orchestrate them manually.
+  Below is the current core agent roster. These agents run automatically as part of your build pipeline - you don’t have to orchestrate them manually.
 </Info>
 
 <AccordionGroup>
@@ -64,7 +64,7 @@ That’s why LaunchPulse can ship complex, multi-feature apps that feel like a r
     - **DRD Agent** – Creates a Database Requirements / Design Document (DRD) defining entities, relationships, and data constraints.
     - **BRD Agent** – Builds a Backend Requirements Document (BRD) that specifies APIs, business rules, and integration points.
 
-    These documents aren’t just “nice to have” — they are live inputs into the engineering agents, so every build is traceable from **idea → spec → implementation**.
+    These documents aren’t just “nice to have” - they are live inputs into the engineering agents, so every build is traceable from **idea → spec → implementation**.
   </Accordion>
   <Accordion title="Database Agent">
     The **Database Agent** owns the data layer end-to-end.
@@ -140,7 +140,7 @@ That’s why LaunchPulse can ship complex, multi-feature apps that feel like a r
     - Syncs generated code into your repo without blindly overwriting manual work.
     - Keeps a traceable history of changes so human developers can review, extend, or fork.
 
-    AI output isn’t stuck in a black box — this agent drops it straight into the Git workflows your team already uses.
+    AI output isn’t stuck in a black box - this agent drops it straight into the Git workflows your team already uses.
   </Accordion>
   <Accordion title="Validation Agent">
     The **Validation Agent** is the internal gatekeeper that keeps other agents honest.
@@ -182,7 +182,7 @@ That’s why LaunchPulse can ship complex, multi-feature apps that feel like a r
 Putting it all together:
 
 - LaunchPulse runs **multiple expert agents** in sequence and in parallel, instead of a single generic chatbot doing everything.
-- All agents share a **unified project memory** — requirements, design, code, tests, and logs are tightly linked, not scattered across tools.
+- All agents share a **unified project memory** - requirements, design, code, tests, and logs are tightly linked, not scattered across tools.
 - **Validation and QA are built in** to the pipeline, not bolted on at the end.
 
 That’s what lets LaunchPulse deliver complex, production-grade apps in one go, while most vibe-coding tools are still stuck on half-finished prototypes.
@@ -212,6 +212,6 @@ That’s what lets LaunchPulse deliver complex, production-grade apps in one go,
 
 <Check>
   <strong><a href="/dashboard">Start your first agent-powered build now.</a></strong>
-  \
+   \
   Give the agents a real idea, and see how far they can take it in a single run.
 </Check>
