Update documentation files

--- a/agents.mdx
+++ b/agents.mdx
@@ -1,6 +1,6 @@
 ---
-description: "Plans, builds, tests, and ships your LaunchPulse apps."
-title: "Meet the multi-agent AI team"
+title: "Agents"
+description: "Meet the multi-agent AI team that plans, builds, tests, and ships your LaunchPulse apps."
 ---
 
 # Agents: Your AI product team
@@ -9,7 +9,7 @@ LaunchPulse doesn’t rely on one “giant” AI that tries to do everything.\
 Every project is built by a specialised **team of agents**, each with a clear role, shared context, and access to its own tools.
 
 <Check>
-  Ready to see them work together?\
+  [Ready to see them work together?](https://launchpulse.ai/)\
   <strong><a href="/https://launchpulse.ai/">Start a new project and let the agents build your first app.</a></strong>
 </Check>
 
@@ -43,7 +43,7 @@ That’s why LaunchPulse can ship complex, multi-feature apps that feel like a r
 ## Agent lineup
 
 <Info>
-  Below is the current core agent roster. These agents run automatically as part of your build pipeline — you don’t have to orchestrate them manually.
+  Below is the current core agent roster. These agents run automatically as part of your build pipeline - you don’t have to orchestrate them manually.
 </Info>
 
 <AccordionGroup>
@@ -64,7 +64,7 @@ That’s why LaunchPulse can ship complex, multi-feature apps that feel like a r
     - **DRD Agent** – Creates a Database Requirements / Design Document (DRD) defining entities, relationships, and data constraints.
     - **BRD Agent** – Builds a Backend Requirements Document (BRD) that specifies APIs, business rules, and integration points.
 
-    These documents aren’t just “nice to have” — they are live inputs into the engineering agents, so every build is traceable from **idea → spec → implementation**.
+    These documents aren’t just “nice to have” - they are live inputs into the engineering agents, so every build is traceable from **idea → spec → implementation**.
   </Accordion>
   <Accordion title="Database Agent">
     The **Database Agent** owns the data layer end-to-end.
@@ -93,6 +93,17 @@ That’s why LaunchPulse can ship complex, multi-feature apps that feel like a r
 
     This agent gives the frontend and backend a clean, contract-driven interface to build against, rather than a mess of ad-hoc endpoints.
   </Accordion>
+  <Accordion title="UX Design Agent">
+    The **UX Design Agent** is your built-in experience designer.
+
+    **What it does**
+
+    - Turns product requirements into user flows, navigation maps, and screen hierarchies.
+    - Focuses on clarity, reduced friction, and high-value actions (conversion, activation, retention).
+    - Produces UX guidance that the Frontend Agent can translate into real components and layouts.
+
+    Instead of random screens stitched together, the UX Design Agent makes your app feel coherent, intentional, and product-ready.
+  </Accordion>
   <Accordion title="Frontend Software Engineer Agent (WEBAPP)">
     The **Frontend Agent** builds everything users see and interact with.
 
@@ -119,6 +130,17 @@ That’s why LaunchPulse can ship complex, multi-feature apps that feel like a r
     - **TESTS Agent** – Produces backend test suites (unit, integration, API tests) and keeps them updated as the code evolves.
 
     Together, they give you real backend architecture instead of one giant fragile file of generated logic.
+  </Accordion>
+  <Accordion title="GitHub Integration Agent">
+    The **GitHub Integration Agent** connects LaunchPulse to your existing dev workflow.
+
+    **What it does**
+
+    - Creates branches, commits, and pull requests with clear, human-readable messages.
+    - Syncs generated code into your repo without blindly overwriting manual work.
+    - Keeps a traceable history of changes so human developers can review, extend, or fork.
+
+    AI output isn’t stuck in a black box - this agent drops it straight into the Git workflows your team already uses.
   </Accordion>
   <Accordion title="Validation Agent">
     The **Validation Agent** is the internal gatekeeper that keeps other agents honest.
@@ -160,7 +182,7 @@ That’s why LaunchPulse can ship complex, multi-feature apps that feel like a r
 Putting it all together:
 
 - LaunchPulse runs **multiple expert agents** in sequence and in parallel, instead of a single generic chatbot doing everything.
-- All agents share a **unified project memory** — requirements, design, code, tests, and logs are tightly linked, not scattered across tools.
+- All agents share a **unified project memory** - requirements, design, code, tests, and logs are tightly linked, not scattered across tools.
 - **Validation and QA are built in** to the pipeline, not bolted on at the end.
 
 That’s what lets LaunchPulse deliver complex, production-grade apps in one go, while most vibe-coding tools are still stuck on half-finished prototypes.
@@ -189,7 +211,7 @@ That’s what lets LaunchPulse deliver complex, production-grade apps in one go,
 </Steps>
 
 <Check>
-  [Start your first agent-powered build now.
-  ](https://www.launchpulse.ai/)\
+  <strong><a href="/dashboard">Start your first agent-powered build now.</a></strong>
+   \
   Give the agents a real idea, and see how far they can take it in a single run.
 </Check>
