Fix images: use Frame component for proper full-width display

--- a/QA Agent.mdx
+++ b/QA Agent.mdx
@@ -42,11 +42,9 @@ Most “AI builders” stop at _it compiled_. LaunchPulse keeps going:
 
 ---
 
-<img
-  src="/images/Screenshot2025-12-03at22.22.53.png"
-  alt="QA Agent Screenshot"
-  style={{ width:"100%",maxWidth:"800px",borderRadius:"12px",margin:"20px 0" }}
-/>
+<Frame>
+  <img src="/images/Screenshot2025-12-03at22.22.53.png" alt="QA Agent Screenshot" />
+</Frame>
 
 ## How a QA run works
 
@@ -118,18 +116,14 @@ While a run is in progress, the sidebar shows QA’s to-do list:
 
 - **Completed tests** – flows the agent has already finished running
 
-  <img
-    src="/images/Screenshot2025-12-03at22.23.16.png"
-    alt="Screenshot"
-    style={{ width:"100%",maxWidth:"800px",borderRadius:"12px",margin:"20px 0" }}
-  />
+  <Frame>
+    <img src="/images/Screenshot2025-12-03at22.23.16.png" alt="Screenshot" />
+  </Frame>
 - **Upcoming tests** – flows that are queued next
 
-  <img
-    src="/images/Screenshot2025-12-03at22.30.51.png"
-    alt="Screenshot"
-    style={{ width:"100%",maxWidth:"800px",borderRadius:"12px",margin:"20px 0" }}
-  />
+  <Frame>
+    <img src="/images/Screenshot2025-12-03at22.30.51.png" alt="Screenshot" />
+  </Frame>
 - **Current action** – a short note like “filling checkout form” or “verifying password reset email”
 
 Keeping this panel open once or twice helps you build intuition for how QA sees your app.
