--- a/launchpulse-cloud.mdx
+++ b/launchpulse-cloud.mdx
@@ -46,11 +46,9 @@ Your app loads quickly, stays stable under load, and is ready for search engines
 - When you’re ready, just click **Deploy** in the top-right corner.
 - A live URL is generated instantly - no configs, no DevOps, no CI/CD wiring.
 
-<img
-  src="/images/cloud-bar.png"
-  alt="LaunchPulse project header"
-  style={{ width: '100%', borderRadius: '12px', margin: '20px 0' }}
-/>
+<Frame>
+  <img src="/images/cloud-bar.png" alt="LaunchPulse project header" />
+</Frame>
 
 <Steps>
   <Step title="1. Validate your app">
@@ -60,11 +58,9 @@ Your app loads quickly, stays stable under load, and is ready for search engines
   <Step title="2. Click Deploy">
     When the project is marked **Ready to deploy**, hit the **Deploy** button in the top-right corner of the project view.
 
-    <img
-      src="/images/cloud-deploy.png"
-      alt="LaunchPulse Deploy button"
-      style={{ width: '100%', borderRadius: '12px', margin: '20px 0' }}
-    />
+    <Frame>
+      <img src="/images/cloud-deploy.png" alt="LaunchPulse Deploy button" />
+    </Frame>
   </Step>
   <Step title="3. Share your live URL">
     After deployment completes, you’ll get a live URL you can share with testers, teammates, or first customers.\
@@ -159,11 +155,9 @@ The user information surface is visible in two places:
 
 There you’ll see **test users** - pre-configured accounts you can use to log in and explore the app like a real user.
 
-<img
-  src="/images/cloud-test-users.png"
-  alt="LaunchPulse test users"
-  style={{ width: '100%', borderRadius: '12px', margin: '20px 0' }}
-/>
+<Frame>
+  <img src="/images/cloud-test-users.png" alt="LaunchPulse test users" />
+</Frame>
 
 <Tip>
   Copy one of the test user credentials and click **View App** to log in as a real user.\
