--- a/index.mdx
+++ b/index.mdx
@@ -3,11 +3,9 @@ title: "Introduction to LaunchPulse"
 description: "LaunchPulse is your AI software team in the browser. "
 ---
 
-<img
-  src="/images/Screenshot2025-11-14at21.04.48.png"
-  alt="LaunchPulse Overview"
-  style={{ width: '100%', borderRadius: '12px', margin: '20px 0' }}
-/>
+<Frame>
+  <img src="/images/Screenshot2025-11-14at21.04.48.png" alt="LaunchPulse Overview" />
+</Frame>
 
 Instead of hiring a full dev team or wrestling with code yourself, you describe the software you want and LaunchPulse’s multi-agent system plans, builds, tests, and deploys a full-stack web application that’s ready for real users.
 
